--- a/.github/workflows/paralleltest-docker.yml
+++ b/.github/workflows/paralleltest-docker.yml
@@ -35,9 +35,24 @@ jobs:
       matrix:
         suite: [functional, openjdk, system, perf]
     steps:
-        - run:
-            echo hello world
-          name: run script
+      - name: Setup ANT_HOME
+        working-directory: ${{ github.workspace }}
+        shell: bash
+        run: |
+          curl -OLJKSks https://dlcdn.apache.org//ant/binaries/apache-ant-1.9.16-bin.tar.gz
+          curl -o ant-contrib.tar.gz -LJSks https://sourceforge.net/projects/ant-contrib/files/ant-contrib/ant-contrib-1.0b2/ant-contrib-1.0b2-bin.tar.gz/download
+          tar xvf ant-contrib.tar.gz
+          tar xvf apache-ant-1.9.16-bin.tar.gz
+          mv ant-contrib/lib/ant-contrib.jar apache-ant-1.9.16/lib/
+          echo "ANT_HOME=${{ github.workspace }}/apache-ant-1.9.16" >> $GITHUB_ENV
+          echo "PATH=$ANT_HOME/bin:$PATH" >> $GITHUB_ENV
+          echo $PATH
+
+      - name: run ant
+        run: |
+          echo $ANT_HOME
+          echo $PATH
+          ant
   #     - uses: adoptium/run-aqa@v2.0.1
   #       with:
   #         jdksource: 'customized'
