--- a/.github/workflows/paralleltest-docker.yml
+++ b/.github/workflows/paralleltest-docker.yml
@@ -50,7 +50,7 @@ jobs:
           tar xvf apache-ant-1.9.16-bin.tar.gz
           mv ant-contrib/lib/ant-contrib.jar apache-ant-1.9.16/lib/
           echo "ANT_HOME=${{ github.workspace }}/apache-ant-1.9.16" >> $GITHUB_ENV
-          echo "${{ github.workspace }}/apache-ant-1.9.16/bin" >> $GITHUB_PATH
+  #        echo "${{ github.workspace }}/apache-ant-1.9.16/bin" >> $GITHUB_PATH
           echo $PATH
 
       - name: echo env
@@ -58,6 +58,10 @@ jobs:
           echo $ANT_HOME
           echo $PATH
 
+      - name: echo ant home
+        run: |
+          echo "$ANT_HOME/bin" >> $GITHUB_ENV
+  
       - name: run ant
         run: |
           ant
